fix(test): 修复单元测试的BUG